# ChatRedPacket

./: CMakeLists.txt  README.md
client/: CMakeLists.txt  Client.cpp
client2/: CMakeLists.txt  Client.cpp
server/: CMakeLists.txt  Server.cpp  test.cpp  test2.cpp
server/sql/: connection_pool.cpp  connection_pool.h
server/src/: RedPacket.cpp  RedPacket.h  User.cpp  User.h
sql/: ChatRedPacket.sql
thrift/: ChatRedPacket.thrift
thrift/gen-cpp/: ChatRedPacket.cpp  ChatRedPacket.h  ChatRedPacket_constants.cpp  ChatRedPacket_constants.h  ChatRedPacket_server.skeleton.cpp  ChatRedPacket_types.cpp  ChatRedPacket_types.h
